src/objects/Daily_Attendance_TOV_MERC__c.object
<CustomObject>
    <description>Junction object between Meeting Days and Meeting Participants, stores a breakdown of Daily ToV which is picked up by the AODS Interface : MERC : Created on 10/10/2013 by John Adams, Mavens Consulting</description>
    <fields>
        <fullName>Confirm_ToV_Reporting_Change_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HCP Care to confirm the ToV change if it has already been reported.  Created 01/07/2014 by KLorenti, Mavens Consulting</description>
        <label>Confirm ToV Reporting Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Food_Bev_ToV_MERC__c</fullName>
        <formula>IF(ISPICKVAL(Status_MERC__c,&quot;Attended&quot;), Meeting_Day_MERC__r.Daily_Food_Beverage_Amount_MERC__c, 
		(IF(
			(ISPICKVAL(Status_MERC__c,&quot;No Show&quot;) &amp;&amp; 
			(ISPICKVAL(Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;)) &amp;&amp; 
			(Meeting_Day_MERC__r.Daily_Food_Beverage_Amount_MERC__c &gt; 0) &amp;&amp; 
			(Status_Change_Post_ToV_Final_MERC__c = TRUE))
		,0, NULL)
	)
)</formula>
        <label>Food and Beverage ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Grnd_Transp_MERC__c</fullName>
        <description>Combined both Group and Individual Travel ToV for reporting into AODS : MERC : Created on 23/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <formula>/* If both are not null then add them together/*
/* but if at least one of them is null then check if Individual transfer is null, if it&apos;s not, then return it*/
/* if individual transfer is null then group ground might not be. if it isn&apos;t return it, if not both are null and return null */
IF ( NOT(ISBLANK(Est_Indv_Transfer_MERC__c)) &amp;&amp;  NOT(ISBLANK(Est_Grp_Grnd_Transp_MERC__c)) &amp;&amp; (TEXT(Meeting_Participant_MERC__r.Status_MERC__c) = &quot;Attended&quot;),
     Est_Indv_Transfer_MERC__c + Est_Grp_Grnd_Transp_MERC__c,
     IF ( NOT(ISBLANK(Est_Indv_Transfer_MERC__c)) &amp;&amp; (TEXT(Meeting_Participant_MERC__r.Status_MERC__c) = &quot;Attended&quot;),
          Est_Indv_Transfer_MERC__c,
          IF ( NOT(ISBLANK(Est_Grp_Grnd_Transp_MERC__c)),
               Est_Grp_Grnd_Transp_MERC__c,
               null
          )
     )
)</formula>
        <label>Ground Transportation TOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Grp_Grnd_Transp_MERC__c</fullName>
        <description>Stores all Group Ground Transportation ToV for meetings : MERC : Created on 23/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <formula>IF(ISPICKVAL(Status_MERC__c,&quot;Attended&quot;), Meeting_Day_MERC__r.Daily_Ground_Trans_Amount_MERC__c, 
		(IF(
			(ISPICKVAL(Status_MERC__c,&quot;No Show&quot;) &amp;&amp; 
			(ISPICKVAL(Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;)) &amp;&amp; 
			(Meeting_Day_MERC__r.Daily_Ground_Trans_Amount_MERC__c &gt; 0) &amp;&amp; 
			(Status_Change_Post_ToV_Final_MERC__c = TRUE))
		,0, NULL)
	)
)</formula>
        <label>Group Ground Transportation ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Hotel_ToV_MERC__c</fullName>
        <description>Captures ToV for Hotels at a Day Level.  Set via custom development based upon Travel Itinerary record and relationship to Meeting Hotel Vendor/Room Rate.  Jan 7th Oliver Dunford</description>
        <label>Hotel ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Indv_Transfer_MERC__c</fullName>
        <description>Total for all Individual Travel ToV will be captured here, driven from Individual Travel ToV Records : MERC : Created on 23/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <label>Individual Travel ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_Reg_Amt_ToV_MERC__c</fullName>
        <formula>IF(ISPICKVAL(Meeting_Participant_MERC__r.Status_MERC__c,&quot;Attended&quot;), Meeting_Day_MERC__r.Daily_Registration_Amount_MERC__c, 
		(IF(
			(ISPICKVAL(Meeting_Participant_MERC__r.Status_MERC__c,&quot;No Show&quot;) &amp;&amp; 
			(ISPICKVAL(Meeting_Participant_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c , &quot;Yes&quot;)) &amp;&amp; 
			(Meeting_Day_MERC__r.Daily_Registration_Amount_MERC__c &gt;= 0) &amp;&amp; 
			(Status_Change_Post_ToV_Final_MERC__c = TRUE))
		,0, NULL)
	)
)</formula>
        <label>Registration Amount ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID_MERC__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Key used to upsert in the daily attendance controller. Will be set in workflow, used to ensure participant has single tov record per day</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting_Day_Date_MERC__c</fullName>
        <description>Oliver Dunford 6th Jan, pulls through the Date of the Meeting Day for Integration to AODS and for reference on the record.</description>
        <formula>Meeting_Day_MERC__r.Date_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Day_MERC__c</fullName>
        <description>Master Detail relationship from Daily Attendance to Meeting Day. Created 10/10/2013 by KLorenti.</description>
        <label>Meeting Day</label>
        <referenceTo>Meeting_Day_MERC__c</referenceTo>
        <relationshipLabel>Daily Attendance &amp; TOV</relationshipLabel>
        <relationshipName>Daily_Attendance_TOV</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Event_Id_MERC__c</fullName>
        <description>Used for Integration with AODS.  Oliver Dunford 3rd Feb 2014.</description>
        <formula>Meeting_Day_MERC__r.Meeting_MERC__r.Event_Id_MERC__c</formula>
        <label>Meeting Event Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Id_MERC__c</fullName>
        <formula>Meeting_Day_MERC__r.Meeting_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_Account_Name_MERC__c</fullName>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.FirstName &amp; &apos; &apos; &amp; Meeting_Participant_MERC__r.Account_MERC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Participant Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Detail relationship from Daily Attendance to Meeting Participant. Created 10/10/2013 by KLorenti.</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Daily Attendance &amp; TOV</relationshipLabel>
        <relationshipName>Daily_Attendance_TOV_MERC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_Record_Type_MERC__c</fullName>
        <formula>Meeting_Participant_MERC__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Participant Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Vendor_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Meeting Vendor to retrieve Hotel Room Rates
Created by John A Adams 10/10/2013</description>
        <label>Meeting Vendor</label>
        <referenceTo>Meeting_Vendor_MERC__c</referenceTo>
        <relationshipLabel>Daily Attendance &amp; TOV</relationshipLabel>
        <relationshipName>Daily_Attendance_TOV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Rate_MERC__c</fullName>
        <formula>Meeting_Vendor_MERC__r.Room_Rate_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_Change_Post_ToV_Final_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether the Daily Attendance Status has changed post AODS ToV being sent.  Oliver Dunford 18th Jun 2014.</description>
        <label>Status Change Post ToV Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>Used to report across daily meeting attendance for HCP&apos;s. Oliver Dunford 6th Nov  2013.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transparency_Reporting_Consent_MERC__c</fullName>
        <description>Pulls in Transparency Opt Out Consent from HCP Profile. Oliver Dunford 7th Nov 2013.</description>
        <label>Transparency Reporting Consent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Daily Attendance &amp; TOV</label>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Attendance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Attendance &amp; TOV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MERC_Confirm_ToV_Reporting_Change</fullName>
        <active>true</active>
        <description>If a change is made to a Daily Attendance &amp; ToV record and the ToV is already reported, HCP Care needs to confirm the change : MERC : Created on 01/07/2014 by Katy Lorenti, Mavens Consulting</description>
        <errorConditionFormula>ISPICKVAL(Meeting_Day_MERC__r.Meeting_MERC__r.Participant_ToV_Final_MERC__c,&quot;Yes&quot;) &amp;&amp;
ISCHANGED(Status_MERC__c ) &amp;&amp;  !Confirm_ToV_Reporting_Change_MERC__c</errorConditionFormula>
        <errorDisplayField>Confirm_ToV_Reporting_Change_MERC__c</errorDisplayField>
        <errorMessage>ToV has already been reported for this meeting participant. Customer Meeting Services needs to confirm this change before it can be made.</errorMessage>
    </validationRules>
</CustomObject>